--- a/spots-server/src/main/resources/application-prod.properties
+++ b/spots-server/src/main/resources/application-prod.properties
@@ -1,9 +1,14 @@
-#é…ç½®ç«¯å£å·
-server.port=0010
 
-#é€šè¿‡eureka:client:registerWithEurekaï¼šfalseå’ŒfetchRegistryï¼šfalseæ¥è¡¨æ˜è‡ªå·±æ˜¯ä¸€ä¸ªeureka server(æ³¨å†Œä¸­å¿ƒ)
-eureka.instance.hostname = localhost
-eureka.client.serviceUrl.defaultZone= http://${eureka.instance.hostname}:${server.port}/eureka/
-# ä¸è®©è‡ªå·±æ³¨å†Œè‡ªå·±
-eureka.client.registerWithEureka= false
-eureka.client.fetchRegistry=false
+#freemarker¾²Ì¬×ÊÔ´ÅäÖÃ
+#Éè¶¨ftlÎÄ¼şÂ·¾¶
+spring.freemarker.template-loader-path=classpath:/templates
+# ¹Ø±Õ»º´æ£¬¼°Ê±Ë¢ĞÂ£¬ÉÏÏßÉú²ú»·¾³ĞèÒªĞŞ¸ÄÎªtrue
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+#ºó×º
+spring.freemarker.suffix=.ftl
