--- a/spots-server/src/main/resources/application-dev.properties
+++ b/spots-server/src/main/resources/application-dev.properties
@@ -1,9 +1,44 @@
-#配置端口号
-server.port=0010
 
-#通过eureka:client:registerWithEureka：false和fetchRegistry：false来表明自己是一个eureka server(注册中心)
-eureka.instance.hostname = localhost
-eureka.client.serviceUrl.defaultZone= http://${eureka.instance.hostname}:${server.port}/eureka/
-# 不让自己注册自己
-eureka.client.registerWithEureka= false
-eureka.client.fetchRegistry=false
+
+
+#配置端口号
+#server.port=8070
+
+spring.application.name= spote-server
+
+eureka.client.serviceUrl.defaultZone= http://localhost:0010/eureka/
+##mybatis配置
+#如需使用mybatis配置文件,需要指定该文件路径的路径
+mybatis.config-location=classpath:mybatis-config.xml
+#指定mapper.xml文件的路径,如果mapper.xml与接口在一起则不需要该配置
+mybatis.mapperlocations=classpath:mapper/*Mapper.xml
+#扫面domain包中的实体类并起别名
+mybatis.type-aliasespackage=com.fy.spotsserver.entity
+#日志级别改为debug可以显示sql语句,logging.level后为存放mapper接口的包
+logging.level.com.mr= debug
+
+
+
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+## Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.lettuce.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=10000
+
+# mongodb
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Spot
