--- a/spots-server/src/main/resources/application.properties
+++ b/spots-server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#配置端口号
+server.port=8070
+spring.profiles.active=dev
+
+##数据源配置
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://192.168.91.162:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
 
