--- a/spots-server/src/main/resources/application-dev.properties
+++ b/spots-server/src/main/resources/application-dev.properties
@@ -18,6 +18,8 @@ mybatis.type-aliasespackage=com.fy.spotsserver.entity
 logging.level.com.mr= debug
 
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+
 
 # Redis数据库索引（默认为0）
 spring.redis.database=0
