--- a/spots-server/src/main/resources/application.properties
+++ b/spots-server/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.profiles.active=dev
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.91.162:3306/
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://39.97.245.96:3306/fy_spots?useUnicode=true&characterEncoding=UTF-8
 
